# puzzled

./: .gitignore  README.md  config.py  main.py  pre-tz.md  pyproject.toml  requrements.txt  todo.md  tz.md
db/: clients.json  index.json  price_list.json  reports.json  sells.json
export/: 24_01_2025_23_54_13.json
pages/: main.py  nav_bar.py  reports.py  sells.py  warehouse.py
utils/: db.py
