[tool.poetry]
name = "puzzled"
version = "0.0.2"
description = "Небольшой олимпиадный проект для работы магазина пазлов."
authors = ["Ivan Melcikov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flet = "0.25.2"
loguru = "0.7.3"

[tool.ruff]
select = ["ALL"]
ignore = [
    # Кирилица
    "RUF001", "RUF002", "RUF003",
    # Магические значения
    "PLR2004",
    # TODO
    "TD002", "TD003", "TD004", "FIX002",
    # Другое
    "INP001"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
